[package]
name = "rust_ether"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }

# To aysnc main
tokio = { version = "1.18.0", features = ["full"] }

# To handle resut of Tokio
eyre = "0.6.8"